fixed overflow

--- a/style.scss
+++ b/style.scss
@@ -12,11 +12,12 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  // max-height: 100vh;
   text-align: center;
   font-size: 2.6rem;
   background-color: #516dff;
   color: #fff;
+  overflow: hidden;
 
   .screen {
     display: flex;
